--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ cycler==0.12.1
 fonttools==4.45.1
 gitdb==4.0.11
 GitPython==3.1.40
+graphviz==0.20.1
 idna==3.6
 importlib-metadata==6.9.0
+iniconfig==2.0.0
 Jinja2==3.1.2
 json-reader==0.3.1
 jsonschema==4.20.0
@@ -25,11 +27,13 @@ numpy==1.26.2
 packaging==23.2
 pandas==2.1.3
 Pillow==10.1.0
+pluggy==1.3.0
 protobuf==4.25.1
 pyarrow==14.0.1
 pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.1
+pytest==7.4.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
 referencing==0.31.1
