--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 altair==5.2.0
+appdirs==1.4.4
+astor==0.8.1
+asttokens==2.4.1
 attrs==23.1.0
 blinker==1.7.0
 cachetools==5.3.2
@@ -7,6 +10,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
+decorator==5.1.1
+executing==2.0.1
 fonttools==4.45.1
 gitdb==4.0.11
 GitPython==3.1.40
@@ -14,6 +19,8 @@ graphviz==0.20.1
 idna==3.6
 importlib-metadata==6.9.0
 iniconfig==2.0.0
+ipython==8.18.1
+jedi==0.19.1
 Jinja2==3.1.2
 json-reader==0.3.1
 jsonschema==4.20.0
@@ -22,35 +29,60 @@ kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.2
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 numpy==1.26.2
 packaging==23.2
 pandas==2.1.3
+pandasgui==0.2.14
+parso==0.8.3
+pexpect==4.9.0
 Pillow==10.1.0
+plotly==5.18.0
 pluggy==1.3.0
+prompt-toolkit==3.0.41
 protobuf==4.25.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==14.0.1
 pydeck==0.8.1b0
 Pygments==2.17.2
+pynput==1.7.6
+pyobjc-core==10.0
+pyobjc-framework-ApplicationServices==10.0
+pyobjc-framework-Cocoa==10.0
+pyobjc-framework-Quartz==10.0
 pyparsing==3.1.1
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.11
+PyQt5-sip==12.13.0
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.11
 pytest==7.4.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
+qtstylish==0.1.5
 referencing==0.31.1
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.13.2
 six==1.16.0
 smmap==5.0.1
+stack-data==0.6.3
 streamlit==1.29.0
 tenacity==8.2.3
 tk==0.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.4
+traitlets==5.14.0
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
+ua-parser==0.18.0
 urllib3==2.1.0
+user-agents==2.2.0
 validators==0.22.0
+wcwidth==0.2.12
+wordcloud==1.9.2
 zipp==3.17.0
