--- a/requirements.txt
+++ b/requirements.txt
@@ -48,10 +48,10 @@ pyarrow==14.0.1
 pydeck==0.8.1b0
 Pygments==2.17.2
 pynput==1.7.6
-pyobjc-core==10.0
-pyobjc-framework-ApplicationServices==10.0
-pyobjc-framework-Cocoa==10.0
-pyobjc-framework-Quartz==10.0
+# pyobjc-core==10.0
+# pyobjc-framework-ApplicationServices==10.0
+# pyobjc-framework-Cocoa==10.0
+# pyobjc-framework-Quartz==10.0
 pyparsing==3.1.1
 PyQt5==5.15.10
 PyQt5-Qt5==5.15.11
@@ -72,7 +72,6 @@ stack-data==0.6.3
 streamlit==1.29.0
 tabulate==0.9.0
 tenacity==8.2.3
-tk==0.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.4
