--- a/requirements.txt
+++ b/requirements.txt
@@ -53,11 +53,11 @@ pynput==1.7.6
 # pyobjc-framework-Cocoa==10.0
 # pyobjc-framework-Quartz==10.0
 pyparsing==3.1.1
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.11
-PyQt5-sip==12.13.0
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.11
+# PyQt5==5.15.10
+# PyQt5-Qt5==5.15.11
+# PyQt5-sip==12.13.0
+# PyQtWebEngine==5.15.6
+# PyQtWebEngine-Qt5==5.15.11
 pytest==7.4.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
